--- a/events/app/views/events/index.html.erb
+++ b/events/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @events.size %> Events</h1>
+<h1><%= pluralize(@events.size, 'Event') %> </h1>
 
 
 <% @events.each do |event| %>
@@ -7,7 +7,7 @@
       <h2><%= event.name %></h2>
     </header>
     <p>
-      <%= event.description %>
+      <%= truncate(event.description, length: 40, separator: ' ' %>
     </p>
     <table>
       <tr>
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <th>Price:</th>
-        <td><%= number_to_currency(event.price) %></td>
+        <td><%= format_total_gross(event) %></td>
       </tr>
     </table>
   </article>
