Routes: Show Page
The following steps have been completed for all applications.

Add a generic route to handle requests for /movies/1, /movies/2,
/movies/3, and so on.

Define a show action in the MoviesController that finds the movie with
the id specified in the URL.

Create a show.html.erb template that generates HTML to display the
movie's details.

--- a/events/app/views/events/index.html.erb
+++ b/events/app/views/events/index.html.erb
@@ -1,13 +1,14 @@
-<h1><%= pluralize(@events.size, 'Event') %> </h1>
-
-
+<h1>Events</h1>
+<p>
+  Check out the following <%= pluralize(@events.size, 'event') %>:
+</p>
 <% @events.each do |event| %>
   <article>
     <header>
       <h2><%= event.name %></h2>
     </header>
     <p>
-      <%= truncate(event.description, length: 40, separator: ' ' %>
+      <%= truncate(event.description, length: 20, separator: ' ') %>
     </p>
     <table>
       <tr>
@@ -20,7 +21,7 @@
       </tr>
       <tr>
         <th>Price:</th>
-        <td><%= format_total_gross(event) %></td>
+        <td><%= format_price(event) %></td>
       </tr>
     </table>
   </article>
