--- a/rails_studio/flix/app/views/movies/index.html.erb
+++ b/rails_studio/flix/app/views/movies/index.html.erb
@@ -1,5 +1,4 @@
-
-<h1><%= pluralize(@movies.size, 'Movie')  %></h1>
+<h1><%= pluralize(@movies.size, 'Movie') %></h1>
 
 <% @movies.each do |movie| %>
   <article>
@@ -12,7 +11,10 @@
     <table>
       <tr>
         <th>Released:</th>
-        <td><%= movie.released_on %> (<%= time_ago_in_words(movie.released_on) %>)</td>
+        <td>
+          <%= movie.released_on %>
+          (<%= time_ago_in_words(movie.released_on) %> ago)
+        </td>
       </tr>
       <tr>
         <th>Rating:</th>
@@ -25,3 +27,4 @@
     </table>
   </article>
 <% end %>
+
