--- a/projects/app/views/projects/index.html.erb
+++ b/projects/app/views/projects/index.html.erb
@@ -4,7 +4,7 @@
 <% @projects.each do |project| %>
   <article>
     <header>
-      <h2><%= project.name %></h2>
+      <h2><%= link_to(project.name, project) %></h2>
     </header>
     <p>
       <%= truncate( project.description , length:150, separator: ' ') %>
