--- a/rails_studio/flix/app/views/movies/show.html.erb
+++ b/rails_studio/flix/app/views/movies/show.html.erb
@@ -1,23 +1,27 @@
 <article>
-    <header>
-      <h2><%= @movie.title %></h2>
-    </header>
-    <p>
-      <%= @movie.description %>
-    </p>
-    <table>
-      <tr>
-        <th>Released:</th>
-        <td><%= @movie.released_on %> (<%= time_ago_in_words(@movie.released_on) %>)</td>
-      </tr>
-      <tr>
-        <th>Rating:</th>
-        <td><%= @movie.rating %></td>
-      </tr>
-      <tr>
-        <th>Total Gross:</th>
-        <td><%= format_total_gross(@movie) %></td>
-      </tr>
-    </table>
-  </article>
-  <%= link_to "All Movies", root_path %>
+  <header>
+    <h1><%= @movie.title %></h1>
+  </header>
+  <h2>Description</h2>
+  <p>
+    <%= @movie.description %>
+  </p>
+  <h3>Rating</h3>
+  <p>
+    <%= @movie.rating %>
+  </p>
+  <h3>Released On</h3>
+  <p>
+    <%= @movie.released_on %>
+  </p>
+  <h3>Total Gross</h3>
+  <p>
+    <%= format_total_gross(@movie) %>
+  </p>
+</article>
+
+<footer>
+  <nav>
+    <%= link_to "All Movies", root_path %>
+  </nav>
+</footer>
