--- a/events/app/views/events/index.html.erb
+++ b/events/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
 <% @events.each do |event| %>
   <article>
     <header>
-      <h2><%= link_to(event.name, event) %></h2>
+      <h2><%= event.name %></h2>
     </header>
     <p>
       <%= truncate(event.description, length: 20, separator: ' ') %>
