--- a/events/app/views/events/show.html.erb
+++ b/events/app/views/events/show.html.erb
@@ -1,26 +1,22 @@
-<article>
-  <header>
-    <h1><%= @event.name %></h1>
-  </header>
-  <p>
-    <%= @event.description %>
-  </p>
-  <h3>When</h3>
-  <p>
-    <%= @event.starts_at %>
-  </p>
-  <h3>Where</h3>
-  <p>
-    <%= @event.location %>
-  </p>
-  <h3>Price</h3>
-  <p>
-    <%= format_price(@event) %>
-  </p>
-</article>
-
-<footer>
-  <nav>
-    <%= link_to("All Events", root_path) %>
-  </nav>
-</footer>
+ <article>
+    <header>
+      <h2><%= @event.name %></h2>
+    </header>
+    <p>
+      <%= @event.description %>
+    </p>
+    <table>
+      <tr>
+        <th>When:</th>
+        <td><%= @event.starts_at %></td>
+      </tr>
+      <tr>
+        <th>Where:</th>
+        <td><%= @event.location %></td>
+      </tr>
+      <tr>
+        <th>Price:</th>
+        <td><%= format_price(@event) %></td>
+      </tr>
+    </table>
+  </article>
